feat: update WebConfigurations